--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <h1>Pong</h1>
+
+    <canvas id="game" width="800" height="600"></canvas>
+
     <script src="js/pong.js" type="text/javascript"></script>
   </body>
 </html>
